<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/corners_white_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/text_location_city"
                android:textColor="@color/color_333333"

                />

            <TextView
                android:id="@+id/appointment_location_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:enabled="true"
                android:gravity="right|center_vertical"
                android:hint="@string/text_location_city_select"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_b2b2b2"
                android:textSize="15sp"

                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/travel_arrow" />


        </LinearLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/corners_white_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/appointment_location_et"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/text_location_city_hint"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingLeft="14dp"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_b2b2b2"
                android:textSize="14sp"

                />



        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_address_hint"
            android:textSize="12sp"
            android:textColor="@color/color_333333"
            android:padding="12dp"

            />
    </LinearLayout>


</ScrollView>

